<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/weight_lbs"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextWeight" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/enter_weight_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/GenderTitle"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroupGenders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroupGenders" />

    <RadioGroup
        android:id="@+id/radioGroupGenders"
        android:layout_width="223dp"
        android:layout_height="34dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textViewGender"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight">

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/male" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSetWeight"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="8sp"
        android:text="@string/set_Weight"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGenders" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/Weight"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetWeight" />

    <TextView
        android:id="@+id/textViewWeightFinal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintBottom_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewDrinkSizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/drinkSizes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewAlcPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/alcPercent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDrinkSizes" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reset"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/space2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPercent" />

    <Button
        android:id="@+id/buttonAddDrink"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/addDrink"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPercent" />

    <RadioGroup
        android:id="@+id/radioGroupDrinkTypes"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDrinkSizes"
        app:layout_constraintStart_toEndOf="@+id/textViewDrinkSizes"
        app:layout_constraintTop_toTopOf="@+id/textViewDrinkSizes">

        <RadioButton
            android:id="@+id/radioButton1oz"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="1 oz"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton5oz"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="5oz"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton12oz"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="12oz"
            android:textStyle="bold" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBarPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="30"
        android:progress="12"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAlcPercentage"
        app:layout_constraintEnd_toStartOf="@+id/textViewPercentage"
        app:layout_constraintStart_toEndOf="@+id/textViewAlcPercentage"
        app:layout_constraintTop_toTopOf="@+id/textViewAlcPercentage" />

    <TextView
        android:id="@+id/textViewPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="12%"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarPercent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarPercent" />

    <TextView
        android:id="@+id/textViewNumDrinks"
        android:layout_width="294dp"
        android:layout_height="58dp"
        android:layout_marginTop="172dp"
        android:text="@string/numDrinks"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <TextView
        android:id="@+id/textViewBACLevel"
        android:layout_width="345dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:text="@string/BAC_Level"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumDrinks" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/yourStatus"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBACLevel" />

    <TextView
        android:id="@+id/textViewStatusResult"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:background="@color/safe_color"
        android:text="@string/safe"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="24sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toEndOf="@+id/textViewStatus"
        app:layout_constraintTop_toTopOf="@+id/textViewStatus"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStatus" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPercent" />

    <Space
        android:id="@+id/space4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewBACLevel"
        tools:layout_editor_absoluteX="182dp" />

</androidx.constraintlayout.widget.ConstraintLayout>